add: ddd hex tmp
